app-chart/temlates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    name: app-deployment
    app: rds-eks
  ports:
       - port: 80
         targetPort: 5000
